<resources>

    <string name="name_style_lite" translatable="false">Lite</string>
    <string name="name_style_assassin" translatable="false">Assassin</string>
    <string name="name_style_midnight" translatable="false">Midnight</string>
    <string name="name_style_blue" translatable="false">Blue Essence</string>
    <string name="name_style_paper" translatable="false">Paper</string>
    <string name="name_style_gray" translatable="false">Gray</string>
    <string name="name_style_uber" translatable="false">Uber</string>

    <!-- selection resource-->
    <plurals name="selected_items">
        <item quantity="one">Un elemento seleccionado</item>
        <item quantity="other">%d elementos seleccionados</item>
    </plurals>
    <plurals name="deleted_items">
        <item quantity="one">Un elemento eliminado</item>
        <item quantity="other">%d elementos eliminados</item>
    </plurals>

    <!-- type name sort running -->
    <string name="app_name" translatable="false">RunningCompose</string>
    <string name="date_type_name">Fecha</string>
    <string name="running_time_type_name">Tiempo del recorrido</string>
    <string name="avg_speed_type_name">Velocidad Media</string>
    <string name="distance_type_name">Distancia</string>
    <string name="calories_burned_type_name">Calorías Quemadas</string>

    <!-- toolbar -->
    <string name="description_clear_selection">Limpia la selección actual</string>
    <string name="description_arrow_back">Regresa a la pantalla anterior</string>

    <!-- error run -->
    <string name="error_load_runs">Error al cargar los recorridos</string>
    <string name="error_load_runs_by_date">Error al cargar los recorridos por fecha</string>

    <!-- runs screen -->
    <string name="description_button_add_run">Iniciar la interfaz del nuevo recorrido</string>
    <string name="description_deleter_select_runs">Elimina los recorridos seleccionados</string>
    <string name="description_current_run_img">Imagen del recorrido actual</string>
    <string name="message_empty_runs">No hay recorridos guardados</string>
    <string name="text_order_by">Ordenar por:</string>
    <string name="description_drop_sort_menu">Despliega el menú de ordenamiento</string>
    <string name="description_order_sort_asc_or_desc">Icono para cambiar el ordenamiento de ascendente a descendente y viceversa</string>

    <!-- details screen-->
    <string name="title_details">Detalles</string>

    <!-- item runs -->
    <string name="item_title_date">Fecha:</string>
    <string name="item_title_hour">Hora:</string>
    <string name="item_title_duration">Duración:</string>
    <string name="item_title_distance">Distancia:</string>
    <string name="item_title_speed">Velocidad:</string>
    <string name="item_title_calories">Calorías:</string>

    <!-- templates -->
    <string name="textTemplateDate" translatable="false">12.12.12</string>
    <string name="textTemplateKm" translatable="false">0km</string>
    <string name="textTemplateTime" translatable="false">00:00:00</string>
    <string name="textTemplateCaloriesBurned" translatable="false">0kcal</string>
    <string name="textTemplateSpeedAVG" translatable="false">0km/h</string>
    <string name="textTemplateTimeMili" translatable="false">00:00:00:00</string>

    <!-- settings screen -->
    <string name="describe_icon_drop_menu">Despliega el menú de opciones</string>
    <string name="title_config_map">Configuración del mapa</string>
    <string name="title_weight_map_line">Grosor de la línea</string>
    <string name="title_map_style">Estilo del mapa</string>
    <string name="title_info_personal">Información Personal</string>
    <string name="label_name_user">Nombre</string>
    <string name="label_weight_user">Peso</string>
    <string name="description_icon_edit_info">Icono de editar la información del usuario</string>
    <string name="text_edit_info_user">Editar información</string>
    <string name="meters" translatable="false">m/ms/cal</string>
    <string name="kilo" translatable="false">km/kmh/kcal</string>
    <string name="number_runs_in_the_graph">Número de recorridos en el gráfico</string>

    <!-- statistics screen -->
    <string name="message_empty_statisctis">No hay estadísticas que mostrar</string>
    <string name="title_graph_statisctis">Gráfico de estadísticas</string>
    <string name="title_total_time">Tiempo total</string>
    <string name="title_total_distance">Distancia total</string>
    <string name="title_total_calories_burned">Calorías quemadas totales</string>
    <string name="title_toltal_avg_speed">Velocidad media</string>
    <string name="title_avg_speed_run_graph">Velocidad media</string>
    <string name="title_runs_order_date_graph">Últimos recorridos ordenados por fecha</string>

    <!-- navigation -->
    <string name="title_screen_runs">Recorridos</string>
    <string name="title_screen_statistics">Estadísticas</string>
    <string name="title_screen_config">Configuración</string>
    <string name="title_others_config">Otras configuraciones</string>
    <string name="title_metrics">métricas</string>


    <!-- general actions -->
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="text_action_pause">Pausar</string>
    <string name="text_action_resume">Reanudar</string>

    <!-- dialog select color -->
    <string name="title_select_color">Selecciona un color</string>

    <!-- edit info screen -->
    <string name="error_empty_name">El nombre no puede estar vacío</string>
    <string name="error_max_length_name">El nombre no puede ser muy largo</string>
    <string name="error_range_weight">Debe dar un peso correcto</string>
    <string name="update_data_success">Los datos fueron actualizados</string>
    <string name="error_validate_data">Verifique sus datos</string>
    <string name="title_color_line">Color de la línea</string>
    <string name="title_edit_data">Edita tus datos</string>
    <string name="title_complete_data">Completa tus datos</string>
    <string name="description_icon_save_info">Botón para guardar los datos</string>


    <!-- dialog permissions tracking -->
    <string name="need_permissions_tracking">Necesita conceder el permiso de localización precisa para poder hacer seguimientos</string>
    <string name="setting_permissions_tracking">Necesita conceder el permiso de localización precisa desde la pantalla de ajustes para poder hacer seguimientos</string>
    <string name="need_permissions_notify">Necesita conceder el permiso de notificaciones para poder hacer el seguimiento en segundo plano</string>
    <string name="setting_permissions_notify">Necesita conceder el permiso de notificaciones desde la pantalla de ajustes para poder hacer el seguimiento en segundo plano</string>
    <string name="description_icon_open_settings">Botón para abrir las configuraciones de la app</string>
    <string name="description_permissions_help">Botón para resaltar un cuadro de ayuda, relacionado con los permisos</string>


    <!-- details screen-->
    <string name="description_location_center">Botón para centrar la cámara el recorrido</string>

    <!-- tracking screen -->
    <string name="description_button_play_tracking">Botón para iniciar el seguimiento del recorrido</string>
    <string name="description_button_resume_tracking">Botón para pausar el seguimiento</string>
    <string name="description_button_resume">Botón para reanudar el seguimiento pausado</string>
    <string name="description_button_stop_and_save_tracking">Botón para detener el seguimiento y guardar los datos actuales</string>
    <string name="title_dialog_cancel_tracking">¿Deseas cancelar el recorrido?</string>
    <string name="message_info_cancel_tracking">El recorrido actual y sus datos serán descartados</string>
    <string name="description_cancel_run">Cancela el recorrido actual y borra los datos</string>
    <string name="title_tracking_screen">Seguimiento</string>
    <string name="title_graph">Seguimientos</string>
    <string name="text_asc_order" translatable="false">ASC</string>
    <string name="text_desc_order" translatable="false">DESC</string>
    <string name="hint_name_user">Escribe tu nombre</string>
    <string name="hint_weight_user">Escribe tu peso</string>
    <string name="error_empty_weight">El peso es requerido</string>
    <string name="error_max_length_weight">El peso no puede ser tan largo</string>
    <string name="message_info_saved_tracking">Guardando datos del recorrido</string>
    <string name="title_tracking">Realizando seguimiento</string>
    <string name="description_arrow_statistics">Abre las estadísticas del recorrido</string>
    <string name="message_data_updated">Datos actualizados correctamente</string>
    <string name="save_data_user">Guardar datos</string>
    <string name="error_saving_run">Error al guardar los datos del recorrido</string>

    <!-- introduction -->
    <string name="description_map">Bienvenido a RunningApp, esta es una app sencilla que se encarga de hacer un seguimiento de un recorrido y trazarlo en un mapa de Google Maps</string>
    <string name="title_location_permission">Permiso de ubicación precisa y en segundo plano</string>
    <string name="title_description_permission">Para poder hacer el seguimiento de un recorrido, la app requiere el permiso de ubicación, además de permitir obtener la ubicación en segundo plano, esto para poder seguir haciendo el seguimiento, incluso si la app no está en primer plano</string>
    <string name="title_notify_permission">Permiso de Notificación</string>
    <string name="title_notify_description">Para poder hacer el seguimiento en segundo plano, en necesario el permiso de notificaciones solo si la versión de su sistema así lo requiere.</string>

    <string name="title_start_button">Iniciar</string>
    <string name="title_prev_button">Anterior</string>
    <string name="title_next_button">Siguiente</string>
    <string name="title_open_setting">Conceder en ajustes</string>
    <string name="title_grant_permission">Conceder ahora</string>
    <string name="text_welcome">Welcome</string>


</resources>